<resources>
    <string name="app_name">HackatonPodcast</string>
    <string name="add_first_podcast">Добавьте первый подкаст</string>
    <string name="add_edit_and_share_your_podcast">Добавляйте, редактируйте и делитесь подкастами вашего сообщества.</string>
    <string name="add_podcast">Добавить подкаст</string>
    <string name="new_podcast">Новый подкаст</string>
    <string name="name">Название</string>
    <string name="enter_podcast_name">Введите название подкаста</string>
    <string name="podcast_description">Описание подкаста</string>
    <string name="load_podcast">Загрузите ваш подкаст</string>
    <string name="choose_ready_audio">Выберите готовый аудиофайл из вашего телефона и добавьте его</string>
    <string name="load_file">Загрузите файл</string>
    <string name="inappropriate_content">Ненормативный контент</string>
    <string name="exclude_episode">Исключить эпизод из экспорта</string>
    <string name="trailer_podcast">Трейлер подкаста</string>
    <string name="who_is_available">Кому доступен данный подкаст</string>
    <string name="all_users">Всем пользователям</string>
    <string name="become_available">При публикации записи с эпизодом, он становится доступным для всех пользователей</string>
    <string name="next">Далее</string>
    <string name="podcast_beautiful_guys">Подкаст прекрасных людей</string>
    <string name="double_dogs">ПараDogs</string>
    <string name="duration_59_16">Длительность: 59:16</string>
    <string name="description">Описание</string>
    <string name="description_podcast">Подкаст, который рассказывает про то, как много в мире прекрасных вещей, которые можно совершить, а также сколько людей, которые могут помочь вам в реализации ваших заветных мечт.</string>
    <string name="content">Содержание</string>
    <string name="_05_41">05:41</string>
    <string name="_15_23">15:23</string>
    <string name="_25_37">25:37</string>
    <string name="_43_15">43:15</string>
    <string name="_47_00">47:00</string>
    <string name="_58_00">58:00</string>
    <string name="firstTimeCode">— Начало обсуждения</string>
    <string name="secondTimeCode">— Основная тема подкаста</string>
    <string name="thirdTimeCode">— Разговор с гостем</string>
    <string name="fourthTimeCode">— Рекламная интеграция</string>
    <string name="fifthTimeCode">— Вопросы от зрителей</string>
    <string name="sixthTimeCode">— Подведение итогов розыгрыша</string>
    <string name="publish_podcast">Опубликовать подкаст</string>
    <string name="podcast_added">Подкаст добавлен</string>
    <string name="share_with_your_subscribers"><![CDATA[Раскажите своим подписчикам о новом подкасте, чтобы получить больше слушателей.]]></string>
    <string name="share_podcast">Поделиться подкастом</string>
    <string name="edit">Редактирование</string>
    <string name="TIMECODES">ТАЙМКОДЫ</string>
    <string name="add_timecode">Добавить таймкод</string>
    <string name="hint_audio">Отметки времени с названием темы. Позволяют слушателям легче путешествовать по подкасту.</string>
</resources>