<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_podcast"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        style="@style/BackButton"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/cover"
        android:src="@mipmap/cover_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/podcast_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/podcast_beautiful_guys"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/cover"
        app:layout_constraintTop_toTopOf="@id/cover" />

    <TextView
        android:id="@+id/podcast_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_dogs"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/podcast_name"
        app:layout_constraintTop_toBottomOf="@id/podcast_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_59_16"
        android:textColor="@color/secondaryTextStyle"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/podcast_author"
        app:layout_constraintTop_toBottomOf="@id/podcast_author" />

    <View
        android:id="@+id/secondDivider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/cover" />


    <TextView
        android:id="@+id/label_description"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondDivider" />

    <TextView
        android:id="@+id/description_podcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp"
        android:text="@string/description_podcast"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/label_description" />

    <View
        android:id="@+id/thirdDivider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/description_podcast" />

    <TextView
        android:id="@+id/content"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_podcast" />


    <TextView
        android:id="@+id/timeCodeFirst"
        style="@style/TimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_05_41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        style="@style/TimeCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstTimeCode"
        app:layout_constraintStart_toEndOf="@id/timeCodeFirst"
        app:layout_constraintTop_toTopOf="@id/timeCodeFirst" />

    <TextView
        android:id="@+id/timeCodeSecond"
        style="@style/TimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCodeFirst" />

    <TextView
        style="@style/TimeCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondTimeCode"
        app:layout_constraintStart_toEndOf="@id/timeCodeSecond"
        app:layout_constraintTop_toTopOf="@id/timeCodeSecond" />

    <TextView
        android:id="@+id/timeCodeThird"
        style="@style/TimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCodeSecond" />

    <TextView
        style="@style/TimeCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdTimeCode"
        app:layout_constraintStart_toEndOf="@id/timeCodeThird"
        app:layout_constraintTop_toTopOf="@id/timeCodeThird" />

    <TextView
        android:id="@+id/timeCodeFourth"
        style="@style/TimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_43_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCodeThird" />

    <TextView
        style="@style/TimeCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourthTimeCode"
        app:layout_constraintStart_toEndOf="@id/timeCodeFourth"
        app:layout_constraintTop_toTopOf="@id/timeCodeFourth" />

    <TextView
        android:id="@+id/timeCodeFifth"
        style="@style/TimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_47_00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCodeFourth" />

    <TextView
        style="@style/TimeCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifthTimeCode"
        app:layout_constraintStart_toEndOf="@id/timeCodeFifth"
        app:layout_constraintTop_toTopOf="@id/timeCodeFifth" />

    <TextView
        android:id="@+id/timeCodeSixth"
        style="@style/TimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_58_00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeCodeFifth" />

    <TextView
        style="@style/TimeCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixthTimeCode"
        app:layout_constraintStart_toEndOf="@id/timeCodeSixth"
        app:layout_constraintTop_toTopOf="@id/timeCodeSixth" />

    <Button
        android:id="@+id/publishPodcast"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="12dp"
        android:text="@string/publish_podcast"
        app:layout_constraintTop_toBottomOf="@id/timeCodeSixth"/>

</androidx.constraintlayout.widget.ConstraintLayout>