<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_podcast"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        style="@style/BackButton"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="@id/cover"
        app:layout_constraintEnd_toEndOf="@id/cover"
        app:layout_constraintStart_toStartOf="@id/cover"
        app:layout_constraintTop_toTopOf="@id/cover"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_name"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/cover"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        style="@style/InputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_podcast_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cover"
        app:layout_constraintTop_toBottomOf="@id/label_name" />

    <TextView
        android:id="@+id/label_description"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/podcast_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover" />

    <EditText
        android:id="@+id/input_description"
        style="@style/InputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_description"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/label_load_podcast"
        style="@style/MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/load_podcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_description" />

    <TextView
        android:id="@+id/secondary_label_load_podcast"
        style="@style/SecondaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/choose_ready_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_load_podcast" />

    <Button
        android:id="@+id/load_file"
        style="@style/SecondButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/load_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondary_label_load_podcast" />

    <View
        android:id="@+id/secondDivider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/load_file" />

    <CheckBox
        android:id="@+id/inappropriateContent"
        style="@style/CheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/inappropriate_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondDivider" />

    <CheckBox
        android:id="@+id/exclude_episode"
        style="@style/CheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclude_episode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inappropriateContent" />

    <CheckBox
        android:id="@+id/podcastTrailer"
        style="@style/CheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/trailer_podcast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exclude_episode" />

    <TextView
        android:id="@+id/label_available"
        style="@style/CheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/who_is_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcastTrailer" />

    <TextView
        android:id="@+id/label_all_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/all_users"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_available"
        tools:ignore="SmallSp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@id/label_all_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_available"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_become_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/become_available"
        app:layout_constraintTop_toBottomOf="@id/label_all_users"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/nextButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/label_become_available"
        tools:layout_editor_absoluteX="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>