<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        style="@style/BackButton"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageView
        android:id="@+id/ic_edit"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_audio"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="14dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_timecode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TIMECODES"
        app:layout_constraintTop_toBottomOf="@id/ic_edit"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="13sp"
        android:textColor="@color/secondaryTextStyle"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/addTimeCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_timecode"
        app:layout_constraintTop_toBottomOf="@id/label_timecode"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:drawablePadding="12dp"
        android:textColor="@color/colorAccent"
        app:drawableLeftCompat="@drawable/ic_add_timecode" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_audio"
        app:layout_constraintTop_toBottomOf="@id/addTimeCode"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/nextButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>